test: expand backend coverage